--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,7 +7,7 @@ builds:
     id: werkzeugkasten
     main: ./
     ldflags:
-      - -X main.Version={{ .Version }}
+      - -X main.version={{ .Version }}
     targets:
       - darwin_amd64
       - darwin_arm64
