--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,24 +19,27 @@ archives:
 checksum:
   algorithm: sha256
 changelog:
-  skip: false
   sort: asc
   use: github
   groups:
-    - title: Features
-      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
-      order: 0
+    - title: Dependency updates
+      regexp: '^.*?(feat|fix|chore)\(deps\)!?:.+$'
+      order: 300
+    - title: "New Features"
+      regexp: '^.*?feat(\(.+\))??!?:.+$'
+      order: 100
     - title: "Bug fixes"
-      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
-      order: 1
-    - title: Others
-      order: 999
-  filters:
-    exclude:
-      - "^docs:"
-      - "^ci:"
+      regexp: '^.*?(fix|refactor)(\(.+\))??!?:.+$'
+      order: 200
+    - title: "Documentation updates"
+      regexp: ^.*?docs?(\(.+\))??!?:.+$
+      order: 400
+    - title: "Build process updates"
+      regexp: ^.*?(build|ci)(\(.+\))??!?:.+$
+      order: 400
+    - title: Other work
+      order: 9999
 release:
-  name_template: "{{ .ProjectName }}-{{ .Version }}"
-  header: |
-    ## {{ .Version }} ({{ .Date }})
-    New {{ .Version }} release!
+  name_template: "{{ .Version }}"
+  footer: |
+    **Full Changelog**: https://github.com/allaman/werkzeugkasten/compare/{{ .PreviousTag }}...{{ .Tag }}
