--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,9 @@ on:
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,18 +17,13 @@ jobs:
       # Checkout and set env
       - name: Checkout
         uses: actions/checkout@v4
+        # It is required for the changelog to work correctly.
+        with:
+          fetch-depth: 0
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: 1.22
-      # Setup env for multi-arch builds
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: arm64,arm
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       # Build & Release binaries
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
