--- a/tools.yaml
+++ b/tools.yaml
@@ -330,3 +330,8 @@ tools:
     description: "Process Compose is a simple and flexible scheduler and orchestrator to manage non-containerized applications."
     categories: ["Utilities", "System"]
     tag: "v1.2.0"
+  mani:
+    identifier: "alajmo/mani"
+    description: "CLI tool to help you manage repositories"
+    categories: ["Utilities", "Git"]
+    tag: "v0.25.0"
