--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,7 +15,7 @@ builds:
       - linux_arm64
 archives:
   - format: binary
-    name_template: "{{ .Binary }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ if eq .Arch `amd64` }}x86_64{{ else }}{{ .Arch }}{{ end }}"
 checksum:
   algorithm: sha256
 changelog:
