--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,7 +7,9 @@ builds:
     id: werkzeugkasten
     main: ./
     ldflags:
-      - -X main.version={{ .Version }}
+      - s
+      - w
+      - -X github.com/allaman/werkzeugkasten/cli.Version={{ .Version }}
     targets:
       - darwin_amd64
       - darwin_arm64
